# Custom-Shell

./: Cargo.toml  README.md
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/.cargo/: config.toml
fuzz/corpus/expand/: seed2  seed3
fuzz/corpus/parser/: seed2  seed3
fuzz/fuzz_targets/: expand.rs  parser.rs
src/: builtins.rs  colors.rs  completion.rs  completions.rs  config.rs  error.rs  execution.rs  expansion.rs  expansion_runner.rs  heredoc.rs  io_helpers.rs  job_control.rs  lib.rs  main.rs  parse.rs  prompt.rs  repl.rs  signals.rs  utils.rs
src/builtins/: config_cmds.rs  control_flow.rs  job_cmds.rs  scripting.rs
src/completion/: matching.rs  suggestions.rs
src/config/: parser.rs  sandbox.rs
src/execution/: redirection.rs  sandbox.rs  spawning.rs
src/expansion/: glob.rs
src/parse/: command_parser.rs  redirection_parser.rs  tokenizer.rs
tests/: interactive.rs  parse_unit.rs  sandbox.rs  scripted.rs
